// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Checkbox Android should renders correctly 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
      Object {
        "backgroundColor": "#057CFC",
      },
    ]
  }
>
  <Icon
    allowFontScaling={false}
    color="white"
    name="ios-checkmark"
    size={20}
  />
</ForwardRef(View)>
`;

exports[`Components Checkbox Android should renders correctly 2`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
      Object {
        "borderColor": "#979797",
        "borderWidth": 0.5,
      },
    ]
  }
/>
`;
